# ariadne

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  a2a_client_example.py  go.mod  go.sum  network_researcher.py  pyproject.toml
cmd/ovn-ic-nbdb-mcp/: main.go
cmd/ovn-ic-sbdb-mcp/: main.go
cmd/ovn-nbdb-mcp/: main.go
cmd/ovn-sbdb-mcp/: main.go
cmd/ovs-vswitch-mcp/: main.go
internal/mcp/: server.go
internal/mcp/ovnicnb/: server.go
internal/mcp/ovnicsb/: server.go
internal/mcp/ovnnb/: server.go
internal/mcp/ovnsb/: server.go
internal/mcp/vswitch/: server.go
internal/schema/ovnicnb/: connection.go  ic_nb_global.go  model.go  ssl.go  transit_switch.go
internal/schema/ovnicsb/: availability_zone.go  connection.go  datapath_binding.go  encap.go  gateway.go  ic_sb_global.go  model.go  port_binding.go  route.go  ssl.go
internal/schema/vswitch/: ct_zone.go  datapath.go  flow_sample_collector_set.go  ipfix.go  mirror.go  model.go
k8s/: kind.yaml
k8s/ariadne/: namespace.yaml
k8s/ariadne/base/: daemonset.yaml  kustomization.yaml  service.yaml
k8s/ariadne/overlays/dev/: kustomization.yaml  mcp_inspector.yaml  remove_ovn_ic_containers.yaml  set_pull_policy.yaml
k8s/ariadne/overlays/dev/files/: mcp_inspector.json
k8s/workloads/base/: cudn-orange.yaml  kustomization.yaml  networkpolicy.yaml  nginx-blue.yaml  nginx-green.yaml  nginx-red.yaml  nginx-yellow.yaml  ns-blue.yaml  ns-green.yaml  ns-red.yaml  ns-yellow.yaml  udn-blue.yaml  udn-green.yaml
scripts/: run_interactive.sh
test/integration/: ovnicnb_test.go  ovnicsb_test.go  ovnnb_test.go  ovnsb_test.go  vswitch_test.go
